# RC-SBDD

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: DATASET_CARD.md  FAILURE_TAXONOMY.md  METRICS.md  ORACLE_RELIABILITY.md  REPRODUCIBILITY.md
paper_source_data/: aizynthfinder_expdiff_t100_top1_summary.csv  aizynthfinder_molcraft_t100_top1_summary.csv  aizynthfinder_molcraft_top1_summary.csv  aizynthfinder_molpilot_framefix_top1_summary.csv  aizynthfinder_molpilot_summary.csv  aizynthfinder_pocketflow_summary.csv  aizynthfinder_prospective20_top1_summary.csv  aizynthfinder_sgediff_summary.csv  bindingmoad_molpilot_v50_dockfast_selection_summary.csv  bindingmoad_molpilot_v50_molfast.csv  bindingmoad_molpilot_v50_risk_scores.csv  bindingmoad_molpilot_v50_run_summary.csv  contact_counterfactual_faithfulness_p1_aggregate.csv  contact_counterfactual_faithfulness_p1_aggregate_summary.csv  equal_capability_selective_baselines_summary.csv  expdiff_official_t100_nall_dockfast_selection_summary.csv  expdiff_official_t100_nall_vina_redock_top1_summary.csv  final_sota_target_level_statistics.csv  fusion_strong_baselines_metrics_agg.csv  generator_shift_adaptive_calibration_p0_summary.csv  generator_shift_calibration_methods_p1_fdr.csv  generator_shift_calibration_methods_p1_sources.csv  generator_shift_calibration_methods_p1_summary.csv  gnina_redock_bindingmoad_v100_top1_pose_quality_summary.csv  gnina_redock_bindingmoad_v100_top4_pose_quality_summary.csv  gnina_redock_expdiff_t100_top4_pose_quality_summary.csv  (+42 more)
(+71 files in other folders)
